<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/paddingEdit">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editHeight"
            android:clickable="true"
            android:focusable="true"
            tools:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopEdit">
            
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/editSize"
                android:text="@string/date"
                android:textColor="?colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/editSize"
                tools:text="yyyy-MM-dd" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopEdit">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/editSize"
                android:text="@string/title"
                android:textColor="?colorPrimary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etTitle"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/editSize"
                tools:text="2012 Superhero movie" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopEdit">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/editSize"
                android:text="@string/description"
                android:textColor="?colorPrimary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/editSize"
                tools:text="Man its lit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopEdit">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/editSize"
                android:text="@string/comment"
                android:textColor="?colorPrimary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etComment"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/editSize"
                tools:text="Need to watch it again soon!" />
        </LinearLayout>

        <Button
            android:id="@+id/btnCommit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/commit"/>

    </LinearLayout>

</ScrollView>